# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
brain_games/: cli.py  game_engine.py  parity_check.py
brain_games/games/: calc.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
